--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuepress": "^1.5.2"
   },
   "dependencies": {
-    "bash": "0.0.1"
+    "less": "^3.12.2",
+    "less-loader": "^6.2.0"
   }
 }
