--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vuepress": "^1.5.2"
   },
   "dependencies": {
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.1.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0"
   }
